# mercari-search-ai-agent

./: .gitignore  DEPLOYMENT.md  FINAL_TEST_SCORE.md  FINAL_VERIFICATION.md  IMPLEMENTATION_SUMMARY.md  README.md  STREAMLIT_CLOUD_DEPLOYMENT.md  TEST_SUMMARY.md  app.py  capture_ui.py  config.py  llm_agent.py  migrate_to_neon.py  models.py  populate_db.py  pyproject.toml  pytest.ini  query.py  render.yaml  replit.md  requirements-streamlit.txt  requirements.txt  run_tests.py  scraper.py  seo_tagger.py  setup.sh  streamlit_app.py  test_final_verification.py  test_simple.py
.github/workflows/: keep_alive.yml
.streamlit/: config.toml
core/: data_handler.py  database.py  llm_service.py  mercari_scraper.py  product_ranker.py  sample_data.py  translator.py
scripts/: capture_ui.py  migrate_secrets.py  setup.sh
showcase/: demo_ai_search.webm
test_reports/: test_summary.md
tests/: __init__.py  conftest.py  test_app_integration.py  test_data_handler.py  test_database.py  test_fix_verification.py  test_integration.py  test_llm.py  test_llm_service.py  test_product_ranker.py  test_query.py  test_translator.py
utils/: helpers.py
