[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.55.0",
    "openai>=1.93.0",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.41",
    "streamlit>=1.46.1",
    "trafilatura>=2.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "selenium>=4.15.0",
    "webdriver-manager>=4.0.0",
    "lxml>=4.9.0",
    "fake-useragent>=1.4.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
    "asyncio>=3.4.3",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
]
